Initial implementation with SHA-256 and SHA-512

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,11 @@
             <artifactId>jnr-ffi</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
