add sonatype parent

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
     <name>kalium</name>
     <url>http://github.com/abstractj/kalium</url>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
