--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
 language: java
 
 before_script:
-  - wget -c http://download.libsodium.org/libsodium/releases/libsodium-0.6.1.tar.gz
-  - tar xzvf libsodium-0.6.1.tar.gz
-  - cd libsodium-0.6.1 && mkdir vendor
+  - wget -c https://github.com/jedisct1/libsodium/releases/download/0.7.0/libsodium-0.7.0.tar.gz
+  - tar xzvf libsodium-0.7.0.tar.gz
+  - cd libsodium-0.7.0 && mkdir vendor
   - ./configure --prefix=`pwd`/vendor
   - make && make install
   - cd ../
 
 script:
-  - export LD_LIBRARY_PATH="/home/travis/build/abstractj/kalium/libsodium-0.6.1/vendor/lib"
+  - export LD_LIBRARY_PATH="/home/travis/build/abstractj/kalium/libsodium-0.7.0/vendor/lib"
   - mvn clean install
 
-env: JAVA_OPTS="-Djava.library.path=/home/travis/build/abstractj/kalium/libsodium-0.6.1/vendor/lib"
+env: JAVA_OPTS="-Djava.library.path=/home/travis/build/abstractj/kalium/libsodium-0.7.0/vendor/lib"
 
 jdk:
   - oraclejdk7
   - openjdk6
 
 after_success:
-  - rm -rf libsodium-0.6.1*
+  - rm -rf libsodium-0.7.0*
