--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 before_script:
-  - ./script/build.sh
+  - ./scripts/build.sh
 
 script:
   - export LD_LIBRARY_PATH="/home/travis/build/abstractj/kalium/libsodium-stable/vendor/lib"
